# Lumina

./: .dockerignore  .gitignore  .pylintrc  Dockerfile  MANIFEST.in  README.md  customer_management.db  docker-compose.yml  local_database.db  pyproject.toml  requirements.txt  setup.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: docker.yaml  main.yml  neon.yml
customer_management/: app.py  logger_config.py
customer_management/controller/: layer_controller.py
customer_management/database/: __init__.py  init.sql  settings.py
customer_management/models/: __init__.py  customer_model.py
customer_management/raw/: __init__.py
customer_management/raw/bronze/: bronze_layer.py
customer_management/raw/gold/: gold_layer.py
customer_management/raw/silver/: silver_layer.py
customer_management/streamlit/: __init__.py
customer_management/streamlit/assets/: metrics.css  styles.css
customer_management/streamlit/pages/: __init__.py  admin_settings.py  customer_panel.py  customer_registration.py  graphic_visualization.py  overview.py
customer_management/streamlit/pages/components/: grid_config.py  page_registry.py  sidebar.py
customer_management/streamlit/visualizations/: __init__.py  metrics_components.py  neighborhood_components.py  trend_components.py
customer_management/utils/: __init__.py  check_email.py  clean_contact.py  clean_data.py  constants.py  contains_emoji.py  country_mapping.py  get_customers.py  layer_controller.py  load_css.py  location_data.py  normalize_country_names.py  optimize_data.py  registry.py  transform_excel.py  validators.py
