[tool.poetry]
name = "customer-management"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
streamlit = "^1.40.1"
taskipy = "^1.14.0"

[tool.taskipy.tasks]
run = { cmd = "python app.py", help = "running project"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
