[tool.poetry]
name = "customer-management"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
streamlit = "^1.40.1"
taskipy = "^1.14.0"
sqlalchemy = "^2.0.36"
pylint = "^3.3.1"
psycopg2-binary = "^2.9.10"
python-dotenv = "^1.0.1"
openpyxl = "^3.1.5"
matplotlib = "^3.9.2"
plotly = "^5.24.1"
streamlit-option-menu = "^0.4.0"
streamlit-aggrid = "^1.0.5"

[tool.taskipy.tasks]
run = "streamlit run app.py"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
