[tool.poetry]
name = "customer-management"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.40.1"
taskipy = "^1.14.0"
sqlalchemy = "^2.0.36"
pylint = "^3.3.1"
psycopg2-binary = "^2.9.10"
python-dotenv = "^1.0.1"
openpyxl = "^3.1.5"
matplotlib = "^3.9.2"
plotly = "^5.24.1"
streamlit-option-menu = "^0.4.0"
streamlit-aggrid = "^1.0.5"
scikit-learn = "^1.6.0"
pandas = "^2.2.3"
statsmodels = "^0.14.4"
pmdarima = "^2.0.4"
pycountry = "^24.6.1"
babel = "^2.16.0"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
black = "^24.10.0"
flake8 = "^7.1.1"
python-semantic-release = "^9.15.2"

[tool.taskipy.tasks]
run = "streamlit run app.py"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variable = [
    "pyproject.toml:version"
]
branch = "main"
upload_to_pypi = false
upload_to_release = true
build_command = "pip install build && python -m build"
